test/valid/59809_sum_of_digits/sum_of_digits.mag
-- Author: 59809, Manuel Leitão

fun sumDigits (n) : Int -> Int =
    if n < 10 then n else n % 10 + sumDigits(n / 10)

fun main (_) : Unit -> Unit =
    print(sumDigits(1234))