test/invalid-syntax/59809_fun_as_param/function_as_param.mag
-- Author: 59809, Manuel Leitão

fun duplicate (n) : Int -> Int = n * 2

fun apply (f,n) : (Int -> Int, Int) -> Int = f(n)

fun main (_) : Unit -> Unit =
    print(apply(duplicate,5))